--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,6 @@ h1 {
   bottom: 0rem;
   left: 50%;
   transform: translate(-50%);
-  color: #8ddf8d;
   color: hsl(135, 41%, 47%);
   font-size: 4rem;
   font-weight: 500;
@@ -64,7 +63,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: 500;
 }
 
@@ -86,6 +85,11 @@ h2 {
 
 .about-me-link {
   height: 2.5rem;
+}
+
+.my-work-title {
+  text-align: center;
+  margin: 1rem;
 }
 
 .my-work-container {
@@ -140,14 +144,22 @@ article {
   margin: 1rem;
 }
 
+.project-name {
+  font-size: 1.7rem;
+}
+
+.project-links {
+  display: flex;
+  gap: 1rem;
+}
+
 .project-description {
   margin: 1rem;
 }
 
 .github-logo,
 .live-view {
-  width: 1rem;
-  height: auto;
+  height: 1.5rem;
 }
 
 .footer {
@@ -156,6 +168,8 @@ article {
   width: 100%;
   display: flex;
   flex-direction: column;
+  padding: 1rem;
+  color: rgb(248, 248, 248);
 }
 .footer-text {
   padding: 1rem;
@@ -165,17 +179,19 @@ article {
 }
 
 .footer-request {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin: 1rem 0rem;
 }
 .phone-email,
 .address {
   margin: 1rem 0rem;
+  font-size: 1.2rem;
 }
 
 .footer-logos {
   display: flex;
   justify-content: center;
+  margin-bottom: 2rem;
 }
 
 .footer-link {
@@ -185,24 +201,62 @@ article {
 
 .footer-image {
   height: 24rem;
+  width: 100%;
   object-fit: cover;
-  margin-top: 2rem;
 }
 
 @media (min-width: 450px) {
   h1 {
-    color: blue;
-    top: 1rem;
+    top: 0rem;
+    right: 20rem;
+    white-space: nowrap;
+    /* bottom: 0rem; */
+    /* left: 50%; */
+    /* transform: translate(0%); */
   }
-  body {
-    /* margin: 2rem; */
+  header {
+    /* display: grid;
+    grid-template-columns: 1rem 1fr 2rem 1fr 1rem;
+    grid-template-rows: 3rem 1fr 25%; */
+  }
+  .image-container {
+    float: left;
+    /* grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: 1; */
+  }
+  .about-me-container {
+    margin-top: 5rem;
+    /* grid-column: 2/5;
+    grid-row: 2/4; */
+  }
+  .about-me-container {
+    /* background-color: grey; */
+  }
+  .about-me-logos {
+    display: none;
+  }
+  .footer {
+    flex-direction: row;
+    align-items: center;
+  }
+  .footer-header {
+    font-size: 2.5rem;
+    text-align: start;
+  }
+  .footer-request {
+    font-size: 1.2rem;
+  }
+  .footer-image {
+    max-width: 45%;
+    overflow: hidden;
   }
 }
 @media (min-width: 800px) {
   h1 {
     color: orange;
   }
-  body {
-    /* margin: 2rem; */
+  .about-me-logos {
+    display: flex;
   }
 }
