--- a/src/style.css
+++ b/src/style.css
@@ -54,8 +54,8 @@ main {
 h1 {
   position: absolute;
   bottom: 0rem;
-  left: 50%;
-  transform: translate(-50%);
+  right: 50%;
+  transform: translate(50%);
   color: hsl(135, 41%, 47%);
   font-size: 4rem;
   font-weight: 500;
@@ -205,33 +205,21 @@ article {
   object-fit: cover;
 }
 
-@media (min-width: 450px) {
+@media (min-width: 560px) {
   h1 {
-    top: 0rem;
-    right: 20rem;
-    white-space: nowrap;
-    /* bottom: 0rem; */
-    /* left: 50%; */
-    /* transform: translate(0%); */
+    transform: none;
+    top: -1rem;
+    right: -19rem;
+    width: max-content;
   }
   header {
-    /* display: grid;
-    grid-template-columns: 1rem 1fr 2rem 1fr 1rem;
-    grid-template-rows: 3rem 1fr 25%; */
+    position: relative;
   }
   .image-container {
     float: left;
-    /* grid-column: 1/4;
-    grid-row: 1/3;
-    z-index: 1; */
   }
   .about-me-container {
-    margin-top: 5rem;
-    /* grid-column: 2/5;
-    grid-row: 2/4; */
-  }
-  .about-me-container {
-    /* background-color: grey; */
+    margin-top: 6rem;
   }
   .about-me-logos {
     display: none;
