--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,9 @@ img {
 body {
   background-color: rgb(22, 22, 22);
   font-family: "EB Garamond", serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .page-container {
@@ -221,12 +224,16 @@ article {
   .about-me-container {
     margin-top: 6rem;
   }
+  .about-me-title {
+    text-align: start;
+  }
   .about-me-logos {
     display: none;
   }
   .footer {
     flex-direction: row;
     align-items: center;
+    justify-content: center;
   }
   .footer-header {
     font-size: 2.5rem;
@@ -236,15 +243,58 @@ article {
     font-size: 1.2rem;
   }
   .footer-image {
-    max-width: 45%;
+    max-width: 430px;
     overflow: hidden;
   }
 }
 @media (min-width: 800px) {
   h1 {
     color: orange;
+    top: 78%;
+    right: 50%;
+    transform: translate(50%);
+  }
+
+  header {
+    display: grid;
+    grid-template-columns: 1fr 3rem 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .image-container {
+    margin: 0rem;
+    height: 100%;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self: center;
+  }
+
+  .tom-portrait {
+    height: 100%;
+    object-fit: cover;
+  }
+  .about-me-container {
+    background-color: hsl(0, 0%, 15%);
+    border-radius: 2%;
+    max-height: 95%;
+    margin-top: 0px;
+    padding: 0rem 0.5rem 1rem 5rem;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .about-me-title {
+    margin: 0px;
   }
   .about-me-logos {
     display: flex;
+    /* position: absolute;
+    right: 0px;
+    bottom: -3rem; */
   }
 }
